--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.7",
     "next": "14.2.7",
+    "pdfjs-dist": "^4.6.82",
     "postcss": "8.4.41",
     "react": "18.3.1",
     "react-dom": "18.3.1",
