--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "@types/node": "22.5.1",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.20",
+    "autoprefixer": "^10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.7",
     "next": "14.2.7",
     "pdfjs-dist": "^4.6.82",
-    "postcss": "8.4.41",
+    "postcss": "^8.4.41",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tailwindcss": "3.4.10",
+    "tailwindcss": "^3.4.10",
     "typescript": "5.5.4"
   }
 }
