--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "autoprefixer": "^10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.7",
+    "mongoose": "^8.6.2",
     "next": "14.2.7",
     "pdfjs-dist": "^4.6.82",
     "postcss": "^8.4.45",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.3.0",
     "tailwindcss": "^3.4.10",
     "typescript": "5.5.4"
   }
